fix logo link on mobile and tablet

--- a/css/main.sass
+++ b/css/main.sass
@@ -445,7 +445,7 @@ p
     height: 220px
     a.mainlink
       width: 100%
-      height: 100%
+      height: 220px
   nav
     padding: 0
     margin: 0
@@ -485,7 +485,7 @@ p
     height: 270px
     a.mainlink
       width: 100%
-      height: 100%
+      height: 270px
   nav
     padding: 0
     margin: 0
